[project]
name = "nonebot-plugin-htmlrender"
version = "0.2.0.3"
description = "通过浏览器渲染图片"
authors = [
    {name = "kexue", email = "xana278@foxmail.com"},
]
dependencies = [
    "playwright>=1.17.2",
    "nonebot2>=2.0.0",
    "jinja2>=3.0.3",
    "markdown>=3.3.6",
    "Pygments>=2.10.0",
    "python-markdown-math>=0.8",
    "pymdown-extensions>=9.1",
    "aiofiles>=0.8.0",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black<23.0.0,>=22.1.0",
    "pytest-asyncio<1.0.0,>=0.18.1",
    "nonebug @ git+https://github.com/nonebot/nonebug.git",
    "nonebot-adapter-onebot<3.0.0.0,>=2.0.0-beta.1",
    "Pillow<10.0.0,>=9.1.1",
    "flake8<4,>=3",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


